# settleup

./: .gitignore  Dockerfile  TAILWIND.md  conftest.py  db.sqlite3  find_output.txt  install_bootstrap.py  main.py  package-lock.json  package.json  pyproject.toml  settleup_bootstrap.py  settleup_expense_fix.py  settleup_requirements.md  settleup_templates.py  tailwind.config.js  tests_integration.py
alerts/: admin.py  context_processors.py  models.py  services.py  urls.py  views.py
alerts/migrations/: 0001_initial.py
audit/: models.py  services.py  urls.py  views.py
audit/migrations/: 0001_initial.py
config/: settings.py  urls.py
config/settings/: base.py  development.py  production.py
expenses/: admin.py  category_urls.py  category_views.py  forms.py  models.py  services.py  tests.py  urls.py  views.py
expenses/migrations/: 0001_initial.py  0002_seed_categories.py
groups/: admin.py  forms.py  mixins.py  models.py  services.py  tests.py  urls.py  views.py
groups/migrations/: 0001_initial.py
notifications/: models.py  services.py  urls.py  views.py
notifications/migrations/: 0001_initial.py
payments/: forms.py  models.py  urls.py  views.py
payments/migrations/: 0001_initial.py
reporting/: urls.py  views.py
static/css/: input.css  main.css
templates/: 403.html  404.html  500.html  base.html
templates/alerts/: alert_list.html
templates/audit/: audit_log.html
templates/expenses/: category_form.html  category_list.html  expense_detail.html  expense_form.html  expense_list.html
users/: forms.py  models.py  urls.py  views.py
(+22 files in other folders)
